[package]
name = "pbrtrs_core"
version = "0.1.0"
edition = "2021"

[features]
enable_axis = []
enable_debugger = []

[dependencies]
cgmath = { version = "0.18", features = ["serde", "swizzle"] }
image = "0.24"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
fastrand = "1.8"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench_main"
harness = false
