[package]
name = "pbrtrs_core"
version = "0.1.0"
edition = "2021"

[features]
enable_axis = []
enable_debugger = []
enable_oidn = ["oidn"]

[dependencies]
cgmath = { version = "0.18", features = ["serde", "swizzle"] }
image = "0.24"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
fastrand = "1.8"
smallvec = "1.10"
bumpalo = "3.11"
oidn = { version = "1.4.2", optional = true }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench_main"
harness = false
